<resources>
    <string name="app_name">Movies</string>
    <string name="acc_poster_image">Movie Poster</string>
    <string name="base_url">http://api.themoviedb.org/3/</string>
    <string name="appwidget_text">FAV MOVIES</string>
    <string name="add_widget">Add widget</string>
    <string name="submit">Submit</string>
    <string name="no_duh">Duh No!</string>

    <!--Menu Entries-->
    <string name="action_popular">Popular</string>
    <string name="action_most_rated">Most Rated</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_logout">Logout</string>
    <string name="action_feedback">Feedback</string>


    <!--content descriptions-->
    <string name="cd_email">Type your email here</string>
    <string name="cd_feedback">Type your Feedback here</string>
    <string name="cd_submit">Submit button</string>
    <string name="cd_share">Share button</string>
    <string name="cd_mark_favorite">Mark as favorite</string>

    <!--Snackbars-->
    <string name="sb_empty_fields">Kindly fill all values properly !</string>
    <string name="sb_submission_successful">Your feedback has been submited ! Thanks. Taking you back to Home.</string>
    <string name="sb_now_showing_popular">Now Showing Popular</string>;
    <string name="sb_now_showing_rated">Now Showing Most Rated</string>;
    <string name="sb_now_showing_favorites">Now Showing Favorites</string>;
    <string name="sb_no_favorites">Oh No, Seems like you haven\'t marked any movie as your favorite!</string>
    <string name="sb_saved_favorite">Saved as Favorite</string>
    <string name="sb_problem_saving_favorite">Something happened, please try again!</string>
    <string name="sb_removed_favorite">Removed from Favorites</string>
    <string name="sb_no_internet">No Internet Connection Available !</string>


    <!--intents-->
    <string name="i_share">"Hey checkout this movie, its awesome. Here\'s the link - https://www.themoviedb.org/movie/"</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="empty_error">please enter somthing</string>
    <string name="send_password">we have sent password to email</string>
    <string name="send_error_password">Failed to send password</string>
    <string name="password_length">password length must be over 6</string>
    <string name="must_signup">you must signup at the first</string>
    <string name="welcome">WELCOME TO MOVIESAPP</string>
    <string name="splash_text">MOVIES APP</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forget_password">forget password?</string>
    <string name="sign_up">sign up</string>
    <string name="or">or</string>
    <string name="password_reset">we just need your registered email to send your password reset instructions</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="reset_password">Reset password</string>
    <string name="register">Register</string>
    <string name="already_account">Already account? Login me!</string>
    <string name="back">back</string>
    <string name="votes">votes</string>
    <string name="login">login</string>
    <string name="Okay">Okay!</string>

    <string name="favorites">favorites</string>
    <string name="popular">popular</string>
    <string name="most_rated">most_rated</string>
    <string name="status">STATUS</string>
    <string name="status_sent">STATUS SENT IS</string>
    <string name="updateAppWidget">updateAppWidget() called</string>
    <string name="onUpdate">onUpdate() called</string>
    <string name="onReceive">onReceive() called</string>
    <string name="Intent_recieved">Intent recieved - </string>
    <string name="initCursor">initCursor() called</string>
    <string name="dismiss">dismiss</string>
    <string name="Received">Received</string>
    <string name="Action">Action</string>

    <string name="sMovie">sMovie :</string>
    <string name="single_movie">single movie</string>
    <string name="error">error :</string>

    <string name="image.tmdb">https://image.tmdb.org/t/p/w780/</string>
    <string name="backdrop_path">backdrop path :</string>
    <string name="image_tmdb185">https://image.tmdb.org/t/p/w185/</string>

    <string name="isVideoAvailable">isVideoAvailable ?</string>
    <string name="img_youtube">https://img.youtube.com/vi/</string>
    <string name="hqdefault">/hqdefault.jpg</string>
    <string name="trailer">trailer :</string>
    <string name="m_youtube">http://m.youtube.com/watch?v=</string>
    <string name="results">results</string>
    <string name="author">author</string>
    <string name="content">content</string>
    <string name="Review_By">Review By -</string>
    <string name="space">------------------------------------------------------------------------------------</string>
    <string name="videos_p">videos</string>

    <string name="movie_id">movie_id</string>
    <string name="poster_path">poster_path</string>

    <string name="MOVIE">MOVIE</string>
    <string name="MOVIE_ID">MOVIE_ID</string>
    <string name="Concatenated">Concatenated String</string>
    <string name="text_plain">text/plain</string>
    <string name="Share_Movie">Share Movie with...</string>
    <string name="Register_Success">Register Success</string>
    <string name="Error">Error</string>
    <string name="logout">Logout</string>


</resources>
