<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.ForgotPassword">


    <ImageView

        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/movie_icon"
        android:contentDescription="@string/welcome"/>

    <TextView
        android:id="@+id/forgot_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/password_reset" />


    <EditText
        android:id="@+id/forgot_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_marginTop="100dp"
        android:hint="@string/enter_your_email"
        android:inputType="textCapWords"
        android:maxLines="1" />


    <Button
        android:id="@+id/forgot_btn_reset"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_email"
        android:layout_marginTop="10dp"
        android:background="#263238"
        android:text="@string/reset_password" />

    <TextView
        android:id="@+id/forgot_btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_btn_reset"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/back"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />


</RelativeLayout>