<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.saeedmac.saeedcapstoneproject.ui.Login"
    >


    <ImageView
        android:id="@+id/icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/welcome"
        android:src="@drawable/movie_icon" />

    <TextView
        android:id="@+id/welcome_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="#222222"
        android:textSize="15sp" />

    <android.support.design.widget.TextInputLayout

        android:id="@+id/login_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_icon"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_input_email"
            android:hint="@string/enter_your_name"
            android:inputType="textCapWords"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_input_email">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn_login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_input_password"
        android:background="#263238"
        android:text="@string/login" />

    <TextView
        android:id="@+id/login_btn_forgot_password"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn_login"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/forget_password"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <LinearLayout

        android:id="@+id/login_layout_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn_forgot_password"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#c4c8c9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/or"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="#c4c8c9" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_btn_signup"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout_or"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

</RelativeLayout>
